@@ -1,3 +1,4 @@
+    ADDED: synchronizer, faster "compare by content" for local files
     ADDED: synchronizer, Feed to listbox
     ADDED: searcher, synchronizer: directory name filters (ex. '* | CVS/')
     ADDED: searcher is able to search content on remote URLs
